[tool.poetry]
name = "rask-sdk"
version = "0.1.0"
description = "Rask SDK"
authors = ["Victor Egiazarian <victor@brask.ai>"]
readme = "README.md"
packages = [
    { include = "rask_sdk" },
]

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "^1.3.2"
httpx = "^0.28.1"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
asort = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
src_paths = ["generation"]
line_length = 95
multi_line_output = 3
force_single_line = true
lines_after_imports = 2
include_trailing_comma = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.mypy]
plugins = ["pydantic.mypy"]